@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Changed the behavior of shakemap2gmfs
   * Removed sorting of the sections in the multiFaultSource reader to keep
     the rup_idxs consistent with the order in the files
   * GMFs too small to produce losses now give a warning rather than an error
